variables.RunHalf.scala.error
Compilation error:
RunHalf:3: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
while ((2 * baggles = orangeCells + 1)!=true) {
          ^